[12.4] released ...
* With the "-E" command line option or if the "skipemptybody" variable is
  set, outgoing messages that contain no text in their first or only part
  are not sent but silently discarded (contributed by Eygene Ryabinkin).
* Support for SMTP AUTH PLAIN has been added (contributed by Joe Feise).
  Set "smtp-auth=plain" to use it.
* Fixed a bug that caused messages to be truncated with IMAP servers that
  use LF as line ending in message data, such as Google Mail (reported by 
  Matthew L. Shobe).
* Do not run filename expansion for IMAP or POP3 mailboxes names, making
  it possible to select mailboxes that contain both brackets and spaces
  in their names (reported by Matthew L. Shobe).
* Fixed the format of the timezone in "Date" header fields for zones in
  the Western Hemisphere whose offsets are not an integral number of hours
  (patch by Matthew Fischer).
* Print an error message when an attempt is made to S/MIME sign a
  message but no "from" address can be determined (Georgi Stanojevski).
* Made the getopt() substitute work with the getopt$UNIX2003() function
  redirection mechanism on Mac OS X Leopard.
* Fixed an incorrect type of enum (patch by Matthew Fischer).

[12.3] released 7/15/07
* Multibyte characters are now handled correctly when printing texts
  encoded in base64. Previously, if a multibyte character spanned
  across a line in the base64-encoded representation, it was not
  recognized, and substitution characters were printed instead.
* In an SMTP exchange, ignore if the server closes the connection
  following the QUIT command instead of sending a proper response code,
  fixing a problem with GMail (Dr. Gary E. Rafe).
* A null pointer dereference that lead to a segmentation fault when
  the user hit return at a yes/no question has been fixed (patch by
  Martin Neitzel).
* If no proper boundary is present in a MIME multipart message, print
  a notification message since otherwise no content is shown at all